--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "gatsby-starter-mate",
   "version": "2.2.0",
-  "description": "A human-readable version of the caffeine-addict coder's website",
+  "description": "Gatsby v2 starter to create a top notch portfolio!",
+  "main": "index.js",
   "scripts": {
     "build": "cleandir ./.cache && gatsby build",
     "develop": "cleandir ./.cache && gatsby develop",
     "start": "npm run develop",
     "lint": "eslint ./src",
-    "setup": "node ./bin/setup.js",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "setup": "node ./bin/setup.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/maacpiash/maacpiash.gitthub.io.git"
+    "url": "git+https://github.com/EmaSuriano/gatsby-starter-mate.git"
   },
   "keywords": [
     "gatsby",
@@ -21,27 +21,27 @@
     "PWA",
     "portfolio"
   ],
-  "author": "Md. Abdul Ahad Chowdhury",
-  "license": "GPL-3.0",
+  "author": "Ema Suriano",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/maacpiash/maacpiash.gitthub.io.git"
+    "url": "https://github.com/EmaSuriano/gatsby-starter-mate/issues"
   },
-  "homepage": "https://github.com/maacpiash/maacpiash.gitthub.io.git",
+  "homepage": "https://github.com/EmaSuriano/gatsby-starter-mate#readme",
   "dependencies": {
     "clean-dir": "^1.0.3",
     "contentful": "^7.0.3",
     "dotenv": "^7.0.0",
     "envfile": "^3.0.0",
-    "gatsby": "^2.0.117",
-    "gatsby-plugin-google-analytics": "^2.0.13",
+    "gatsby": "^2.3.27",
+    "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-google-fonts": "^0.0.4",
-    "gatsby-plugin-manifest": "^2.0.17",
-    "gatsby-plugin-offline": "^2.0.23",
-    "gatsby-plugin-react-helmet": "^3.0.6",
-    "gatsby-plugin-styled-components": "^3.0.5",
-    "gatsby-source-contentful": "^2.0.46",
-    "gatsby-source-medium": "^2.0.4",
-    "gatsby-transformer-remark": "^2.2.4",
+    "gatsby-plugin-manifest": "^2.0.29",
+    "gatsby-plugin-offline": "^2.0.25",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-source-contentful": "^2.0.52",
+    "gatsby-source-medium": "^2.0.7",
+    "gatsby-transformer-remark": "^2.3.10",
     "inquirer": "^6.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
@@ -63,10 +63,9 @@
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.12.3",
-    "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0"
   },
