--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-source-medium": "^2.0.7",
     "gatsby-transformer-remark": "^2.3.10",
     "inquirer": "^6.2.0",
+    "prettier": "^1.18.2",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
