--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EmaSuriano/gatsby-starter-mate.git"
+    "url": "git+https://github.com/maacpiash/human.git"
   },
   "keywords": [
     "gatsby",
@@ -24,9 +24,9 @@
   "author": "Ema Suriano",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/EmaSuriano/gatsby-starter-mate/issues"
+    "url": "https://github.com/maacpiash/human/issues"
   },
-  "homepage": "https://github.com/EmaSuriano/gatsby-starter-mate#readme",
+  "homepage": "https://github.com/maacpiash/human#readme",
   "dependencies": {
     "clean-dir": "^1.0.3",
     "contentful": "^7.0.3",
