--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-fontawesome": "^1.6.1",
     "react-headroom": "^2.2.4",
     "react-helmet": "^5.2.0",
+    "react-html-parser": "^2.0.2",
     "react-markdown": "^4.0.3",
     "react-reveal": "^1.2.2",
     "react-scroll-section": "^1.3.0",
