--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "git+https://github.com/maacpiash/human.git"
   },
+  "engines": {
+    "node": "12.13.0"
+  },
   "keywords": [
     "gatsby",
     "starter",
