--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/maacpiash/human.git"
   },
   "engines": {
-    "node": "12.13.0"
+    "node": ">=12.0"
   },
   "keywords": [
     "gatsby",
