--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "styled-components": "^4.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "chalk": "^2.4.1",
     "contentful-import": "^7.4.0",
     "eslint": "^5.6.0",
