chore(docs): Modify license, add author details
Since the original template by Ema Suriano was under MIT license, I felt
it's not fair of me to put this project, which was virtually scaffolded
by Mr. Suriano's project, under GPL-3.0 license.

I also added my name, email address and URL inside package.json.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "PWA",
     "portfolio"
   ],
-  "author": "Ahad Chowdhury",
+  "author": {
+    "name": "Mohammad Abdul Ahad Chowdhury",
+    "email": "ahadc@maacpiash.com",
+    "url": "https://www.maacpiash.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/maacpiash/human/issues"
